--- a/index.html
+++ b/index.html
@@ -918,40 +918,40 @@ I'm so happy for you and so proud of the person you've grown into. See you in De
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">This is us.</h2>
                 <p class="item-intro text-muted">I have enjoyed every single moment here way too much. You are the best.</p>
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="img/us/2.jpg" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/2.jpg?raw=true" alt="">
 				<p class="item-intro text-muted">What a day at Starbucks, from the lipstick to the ly :*</p>
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="img/us/7.jpg" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="img/us/24.jpg" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="img/us/3.jpg" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/7.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/24.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/3.jpg?raw=true" alt="">
 				<p class="item-intro text-muted">One of my favorite movie watching experiences ever</p>
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="img/us/1.gif" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="img/us/13.jpg" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/1.gif?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/13.jpg?raw=true" alt="">
 				<p class="item-intro text-muted">Literally all of Delhi was the absolute best</p>
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="img/us/20.jpg" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="img/us/22.jpg" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/20.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/22.jpg?raw=true" alt="">
 				<p class="item-intro text-muted">Sneaky feels from when you were rocking out </p>
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="img/us/23.jpg" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="img/us/8.jpg" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="img/us/1.jpg" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="img/us/21.jpg" alt="">
-				<img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="img/us/14.jpg" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="img/us/3.gif" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/23.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/8.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/1.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/21.jpg?raw=true" alt="">
+				<img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/14.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/3.gif?raw=true" alt="">
                 <p class="item-intro text-muted">One extremely, extremely memorable date</p>
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="img/us/18.jpg" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="img/us/2.gif" alt="">
-				<img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="img/us/9.jpg" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/18.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/2.gif" alt="">
+				<img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/9.jpg?raw=true" alt="">
                 <p class="item-intro text-muted">Thanks for meeting my family...</p>
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="img/us/12.jpg" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="img/us/17.jpg" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="img/us/10.jpg" alt="">
-				<img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="img/us/11.jpg" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/12.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/17.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/10.jpg?raw=true" alt="">
+				<img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/11.jpg?raw=true" alt="">
                 <p class="item-intro text-muted">Loved the concert way more than our faces show</p>
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="img/us/19.jpg" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="img/us/5.jpg" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="img/us/25.jpg" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="img/us/6.jpg" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/19.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/5.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/25.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/6.jpg?raw=true" alt="">
 				<p class="item-intro text-muted">...and introducing me to your adorable family</p>
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="img/us/16.jpg" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/us/16.jpg?raw=true" alt="">
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
                   Close Project</button>
