--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
 
   <title>For Ila</title>
-  <link rel="shortcut icon" type="image/png" href="/img/favicon.jpg"/>
+  <link rel="shortcut icon" type="image/png" href="https://github.com/MaxAw/maxaw.github.io/blob/master/favicon.jpg?raw=true"/>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -145,7 +145,7 @@
           </div>
         </div>
         
-        <div class="col-sm-12 portfolio-item">
+        <div class="col-md4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
@@ -155,8 +155,8 @@
             <img class="img-fluid lazy" data-src="img/portfolio/05-thumbnail.jpg" alt="">
           </a>
           <div class="portfolio-caption">
-            <h4>PLACEHOLDER</h4>
-            <p class="text-muted">PLACEHOLDER</p>
+            <h4>From me</h4>
+            <p class="text-muted">For you</p>
           </div>
         </div>
         
@@ -306,7 +306,7 @@
           <h3 class="section-subheading text-muted">They all helped immensely</h3>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle lazy" data-src="img/team/1.jpg" alt="">
@@ -379,7 +379,7 @@
             </ul>
           </div>
         </div>
-      </div>
+      </div> -->
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
           <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
