--- a/index.html
+++ b/index.html
@@ -382,7 +382,13 @@
       </div> -->
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+          <p class="large text-muted">Nitya, Prerna and Devanshi were really really helpful. And everyone else was lovely and encouraging and they just wanted to all express themselves to you so much. You are loved and adored and cherished by every person here and more.
+		  I am really sorry if I forgot to get any people's messages. This is everybody that I remembered and had access too. 
+		  <br><br>
+		  I really hope you feel the love of everybody involved here. <br><br>
+		  I love you.<br><br>
+		  My pretty pie<br><br>
+		  💗 💕 ❤️</p>
         </div>
       </div>
     </div>
