--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
 
   <title>For Ila</title>
-  <link rel="shortcut icon" type="image/png" href="https://github.com/MaxAw/maxaw.github.io/blob/master/favicon.jpg?raw=true"/>
+  <link rel="shortcut icon" type="image/png" href="/favicon.jpg?raw=true"/>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -71,24 +71,15 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Hey you, :*</h2>
-          <h3 class="section-subheading text-muted">Happy Birthday my love</h3>
+          <h2 class="section-heading text-uppercase">Hey, :*<b>Happy Birthday my love</h2>
+          <h3 class="section-subheading text-muted">Hey baby, just wanted to tell you how perfect you are and how much I love you. Thanks for being the most amazing person I could have met. All I want is for you to be happy and satisfied in everything you do. I'm very happy to be a part of your life.</h3>
 		  <span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-heart fa-stack-1x fa-inverse"></i>
           </span>
         </div>
       </div>
-      <!--<div class="row text-center">
-        <div class="col-lg-12 center">
-          
-          <h4 class="service-heading">PRETTY PIE</h4>
-          <p class="text-muted"><div class="colorchange">Hey baby, just wanted to tell you how perfect you are and how much I love you. Thanks for being the most amazing person I could have met. All I want is for you to be happy and satisfied in everything you do. I'm very happy to be a part of your life. <br><br>Happy 21st<br><br>Keep Scrolling </p>
-			 </div><span class="fa-stack fa-1x">
-            <i class="fas fa-align-justify fa-stack-1x fa-primary"></i>
-          </span>
-		</div>
-      </div>-->
+
     </div>
   </section>
 
