--- a/index.html
+++ b/index.html
@@ -516,14 +516,14 @@
                 <!-- Project Details Go Here -->
                 <h2 class="text-uppercase">Things your family had to say</h2>
                 <p class="item-intro text-muted">All credit to Nitya</p>
-				                <img class="img-fluid d-block mx-auto  float-center lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2013.jpg?raw=true" alt="">
+				                <img class="img-fluid d-block mx-auto  float-center lazy" data-src="/img/fam/fam%2013.jpg?raw=true" alt="">
 
 				<h4 class="text-uppercase">Appa</h4>
 				<p class="item-intro text-muted">My dear firstborn,<br>
 I wish you a very special happy birthday with an ocean of love from family and friends. <br>
 Love,<br>
 Appa. </p>
-                <img class="img-fluid d-block mx-auto  lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/Appa%201.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto  lazy" data-src="/img/fam/Appa%201.jpg?raw=true" alt="">
 
 				<h4 class="text-uppercase">Amma</h4>
 				<p class="item-intro text-muted">Twenty one!  Fully an adult now.  No more that tentative, Am I an adult at 18?  Or not?  <br>
@@ -540,7 +540,7 @@ Waiting to see it.
 May all your dreams come true.  Lots of love and hugs on your birthday,
 <br>
 Amma</p>
-                <img class="img-fluid d-block mx-auto lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/Amma%201.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto lazy" data-src="/img/fam/Amma%201.jpg?raw=true" alt="">
 				<h4 class="text-uppercase">Nitya</h4>
 				<p class="item-intro text-muted">To Lla: <br>
 
@@ -571,7 +571,7 @@ You keep on, like waves<br>
 Go girl and do you<br>
 'Cause I see what you may not<br>
 And Cookie says mrow<br><br></p>
-                <img class="img-fluid d-block mx-auto  lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/Nitya%201.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto  lazy" data-src="/img/fam/Nitya%201.jpg?raw=true" alt="">
 				<h4 class="text-uppercase">Grandparents</h4>
 				<p class="item-intro text-muted">Our Dearest granddaughter Ila is going to be 21!<br>
 Of all our grand daughters, Ila is the one with whom we  have spent most time. We were blessed to be a part of every stage in her life and have watched her grow from a rather difficult child into a beautiful mature person now. It has been such a fascinating experience.
@@ -583,37 +583,37 @@ Ila is growing into a wonderful  person, affectionate and loving and very mature
 Our heartfelt special blessings for  her. We wish her a very happy and fulfilling life.
 <br>
 Sweet Ila,  Let the fragrance of two decades you showered on us delight us on the third and on and on!</p>			
-				<img class="img-fluid d-block mx-auto  float lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/Grandparents%201.jpg?raw=true" alt="">
+				<img class="img-fluid d-block mx-auto  float lazy" data-src="/img/fam/Grandparents%201.jpg?raw=true" alt="">
 <h4 class="text-uppercase">Cookie</h4>
 				<p class="item-intro text-muted">MEOWRR</p>			
-				<img class="img-fluid d-block mx-auto  float-center lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2025.jpg?raw=true" alt="">
+				<img class="img-fluid d-block mx-auto  float-center lazy" data-src="/img/fam/fam%2025.jpg?raw=true" alt="">
 				
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%201.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%202.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%204.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%205.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%206.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%207.jpg?raw=true" alt="">
-				<img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%203.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%209.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2010.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2011.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2014.jpg?raw=true" alt="">                
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2016.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2018.jpg?raw=true" alt="">
-				<img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2017.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2019.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2020.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2030.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2022.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2023.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2024.jpg?raw=true" alt="">
-				<img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2031.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2026.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2027.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2028.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2029.jpg?raw=true" alt="">
-                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="https://github.com/MaxAw/happy-bday/blob/master/fam/fam%2032.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="/img/fam/fam%201.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="/img/fam/fam%202.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="/img/fam/fam%204.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="/img/fam/fam%205.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="/img/fam/fam%206.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="/img/fam/fam%207.jpg?raw=true" alt="">
+				<img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="/img/fam/fam%203.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="/img/fam/fam%209.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="/img/fam/fam%2010.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="/img/fam/fam%2011.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="/img/fam/fam%2014.jpg?raw=true" alt="">                
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="/img/fam/fam%2016.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="/img/fam/fam%2018.jpg?raw=true" alt="">
+				<img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="/img/fam/fam%2017.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="/img/fam/fam%2019.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="/img/fam/fam%2020.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="/img/fam/fam%2030.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="/img/fam/fam%2022.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="/img/fam/fam%2023.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="/img/fam/fam%2024.jpg?raw=true" alt="">
+				<img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="/img/fam/fam%2031.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="/img/fam/fam%2026.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="/img/fam/fam%2027.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="/img/fam/fam%2028.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-left lazy" data-src="/img/fam/fam%2029.jpg?raw=true" alt="">
+                <img class="img-fluid d-block mx-auto imgwish float-right lazy" data-src="/img/fam/fam%2032.jpg?raw=true" alt="">
 
               </div>
             </div>
