--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           </div>
         </div>
         
-        <div class="col-md-12 col-sm-12 portfolio-item">
+        <div class="col-md-12 col-sm-12 portfolio-item center">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
